# certpremium

./: .env.example  .gitignore  .semgrep.yml  .trivyignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: .trivyignore  ci.yml  codeql.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/certpremium/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: apps.py  middleware.py  models.py  signals.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/templates/core/: certmonitor.html
